# FriendZone

./: .buildinfo  .gitignore  .licenserc.yaml  CMakeLists.txt  README.md  README.rst  design.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/: .licenserc.yaml
.github/workflows/: c-cpp.yaml  c-cpp_tmpl.yml  deploy_docs.yaml  merge.yaml  nightly.yaml  pull_request.yaml  test_docs.yaml
_sources/: design.rst.txt  index.rst.txt  installation.rst.txt
_sources/autoapi/friendzone/: index.rst.txt
_sources/autoapi/molecules/: index.rst.txt
_sources/autoapi/nwx2nwchem/: index.rst.txt
_sources/autoapi/nwx2qcengine/: index.rst.txt
_sources/autoapi/test_friendzone/: index.rst.txt
_sources/module_api/: ASE(NWChem)___CCSD(T).rst.txt  ASE(NWChem)___CCSD(T)_gradient.rst.txt  ASE(NWChem)___CCSD.rst.txt  ASE(NWChem)___CCSD_gradient.rst.txt  ASE(NWChem)___MP2.rst.txt  ASE(NWChem)___MP2_gradient.rst.txt  ASE(NWChem)___SCF.rst.txt  ASE(NWChem)___SCF_gradient.rst.txt  ChemicalSystem_via_QCElemental.rst.txt  NWChem___CCSD(T).rst.txt  NWChem___CCSD.rst.txt  NWChem___MP2.rst.txt  NWChem___SCF.rst.txt  index.rst.txt  nwchem___B3LYP.rst.txt  nwchem___B3LYP_Gradient.rst.txt  nwchem___CCSD(T).rst.txt  nwchem___CCSD(T)_Gradient.rst.txt  nwchem___CCSD.rst.txt  nwchem___CCSD_Gradient.rst.txt  nwchem___MP2.rst.txt  nwchem___MP2_Gradient.rst.txt  nwchem___SCF.rst.txt  nwchem___SCF_Gradient.rst.txt
autoapi/friendzone/: index.html
autoapi/friendzone/friends/: index.html
autoapi/friendzone/nwx2ase/: index.html
autoapi/friendzone/nwx2molssi/: index.html
autoapi/friendzone/nwx2nwchem/: index.html
autoapi/friendzone/nwx2qcelemental/: index.html
autoapi/friendzone/nwx2qcengine/: index.html
autoapi/molecules/: index.html
autoapi/nwx2nwchem/: index.html
autoapi/nwx2qcengine/: index.html
autoapi/test_friendzone/: index.html
cmake/: ase.cmake  friends.py.in  get_cpp.cmake  molssi.cmake  nwchem.cmake
cmake/python/: find_python.cmake  find_python_module.cmake  python.cmake
docs/: Makefile
docs/source/: conf.py  design.rst  index.rst  installation.rst  nitpick_exceptions
friendzone_cxx_api/: annotated.html  classes.html  classfriendzone_1_1nwx2ase_1_1nwchem__via__ase_1_1NWChemEnergyViaASE-members.html  classfriendzone_1_1nwx2ase_1_1nwchem__via__ase_1_1NWChemEnergyViaASE.html  classfriendzone_1_1nwx2ase_1_1nwchem__via__ase_1_1NWChemEnergyViaASE__inherit__graph.map  classfriendzone_1_1nwx2ase_1_1nwchem__via__ase_1_1NWChemEnergyViaASE__inherit__graph.md5  classfriendzone_1_1nwx2ase_1_1nwchem__via__ase_1_1NWChemGradientViaASE-members.html  classfriendzone_1_1nwx2ase_1_1nwchem__via__ase_1_1NWChemGradientViaASE.html  classfriendzone_1_1nwx2ase_1_1nwchem__via__ase_1_1NWChemGradientViaASE__coll__graph.map  classfriendzone_1_1nwx2ase_1_1nwchem__via__ase_1_1NWChemGradientViaASE__coll__graph.md5  classfriendzone_1_1nwx2ase_1_1nwchem__via__ase_1_1NWChemGradientViaASE__inherit__graph.map  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineEnergy-members.html  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineEnergy.html  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineEnergy__coll__graph.map  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineEnergy__coll__graph.md5  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineEnergy__inherit__graph.map  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineEnergy__inherit__graph.md5  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineGradient-members.html  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineGradient.html  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineGradient__coll__graph.md5  classfriendzone_1_1nwx2molssi_1_1nwchem__via__molssi_1_1QCEngineGradient__inherit__graph.map  classfriendzone_1_1nwx2molssi_1_1system__via__molssi_1_1SystemViaMolSSI-members.html  classfriendzone_1_1nwx2molssi_1_1system__via__molssi_1_1SystemViaMolSSI.html  classfriendzone_1_1nwx2molssi_1_1system__via__molssi_1_1SystemViaMolSSI__inherit__graph.map  classfriendzone_1_1nwx2molssi_1_1system__via__molssi_1_1SystemViaMolSSI__inherit__graph.md5  classfriendzone_1_1nwx2nwchem_1_1NWChemViaMolSSI-members.html  classfriendzone_1_1nwx2nwchem_1_1NWChemViaMolSSI.html  classfriendzone_1_1nwx2nwchem_1_1NWChemViaMolSSI__coll__graph.map  classfriendzone_1_1nwx2nwchem_1_1NWChemViaMolSSI__inherit__graph.md5  classfriendzone_1_1nwx2qcelemental_1_1SystemViaMolSSI-members.html  classfriendzone_1_1nwx2qcelemental_1_1SystemViaMolSSI.html  classfriendzone_1_1nwx2qcelemental_1_1SystemViaMolSSI__coll__graph.map  classfriendzone_1_1nwx2qcelemental_1_1SystemViaMolSSI__inherit__graph.md5  classfriendzone_1_1nwx2qcengine_1_1QCEngineEnergy-members.html  classfriendzone_1_1nwx2qcengine_1_1QCEngineEnergy.html  classfriendzone_1_1nwx2qcengine_1_1QCEngineEnergy__coll__graph.map  classfriendzone_1_1nwx2qcengine_1_1QCEngineEnergy__coll__graph.md5  classfriendzone_1_1nwx2qcengine_1_1QCEngineEnergy__inherit__graph.map  classfriendzone_1_1nwx2qcengine_1_1QCEngineEnergy__inherit__graph.md5  classfriendzone_1_1nwx2qcengine_1_1QCEngineGradient-members.html  (+28 more)
friendzone_cxx_api/search/: all_0.js  all_1.js  all_2.js  classes_0.js  classes_1.js  classes_2.js  searchdata.js
module_api/: ASE(NWChem)___CCSD(T).html  ASE(NWChem)___CCSD(T)_gradient.html  ASE(NWChem)___CCSD.html  ASE(NWChem)___CCSD_gradient.html  ASE(NWChem)___MP2.html  ASE(NWChem)___MP2_gradient.html  ASE(NWChem)___SCF.html  ASE(NWChem)___SCF_gradient.html  ChemicalSystem_via_QCElemental.html  NWChem___CCSD(T).html  NWChem___CCSD.html  NWChem___MP2.html  NWChem___SCF.html  index.html  nwchem___B3LYP.html  nwchem___B3LYP_Gradient.html  nwchem___CCSD(T).html  nwchem___CCSD(T)_Gradient.html  nwchem___CCSD.html  nwchem___CCSD_Gradient.html  nwchem___MP2.html  nwchem___MP2_Gradient.html  nwchem___SCF.html  nwchem___SCF_Gradient.html
src/: main.py
src/friendzone/: __init__.py
src/python/: test.py
(+106 files in other folders)
