# This file defines the pip-installable Python package.

[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

# To create a pip-installable package that uses CMake in the backend, 
# scikit-build-core is used as the build backend, recommended by Pybind11.
#
# scikit-build-core: https://scikit-build-core.readthedocs.io/en/latest/
# Pybind11 scikit-build-core example: https://github.com/pybind/scikit_build_example
# [build-system]
# requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
# build-backend = "scikit_build_core.build"


[project]
name = "friendzone"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "A minimal example package (with pybind11)"
readme = "README.md"
authors = [{ name = "zachcran", email = "zachcran@iastate.edu" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Private :: Do Not Upload",
]
# Dynamic project attributes
#
# Set the project version dynamically according to git tags.
# Git tag version info: https://github.com/pypa/setuptools-scm/blob/fb261332d9b46aa5a258042d85baa5aa7b9f4fa2/README.rst#default-versioning-scheme
dynamic = ["version"]


[tool.setuptools]
package-dir = {"" = "src/python"}


[dependency-groups]
test = ["pytest"]
dev = [{ include-group = "test" }]
ase = ["ase"]
nwchem = ["qcengine", "qcelemental", "networkx"]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = ["error", "ignore::pytest.PytestCacheWarning"]
testpaths = ["tests"]
